[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "datapungibea"
author = "James Otterson"
author-email = "jjotterson@gmail.com"
home-page = "https://github.com/jjotterson/datapungibea"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

