[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "datapungibea"
author = "James Otterson"
author-email = "jjotterson@gmail.com"
home-page = "https://github.com/jjotterson/datapungibea"
requires=[
    "requests",
    "pandas",
    "pytest",
    "pytest-html",
    "pyperclip",
    "lxml",
    "xlrd",
    "beautifulsoup4",
    "html5lib",
]
description-file="README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
]

